# exo

./: .gitignore  .~lock.Instructions to use the exoskeleton.docx#  Instructions to use the exoskeleton.docx  README.md  config_odrive.py  readme.md  requirements.txt
config/: README.md  config.json  config_odrive.py
controller/: CMakeLists.txt  README.md
controller/include/controller/: control_parameters.h  project.h
controller/src/: ref_generator.cpp  test.cpp
detection/: camera.py  fake_detector.py  find_camera.py  live-detection-pipeline.py  requirements.txt  udprecieve  udprecieve.cpp
exo_config/: calibrate_axis.py  config_odrive_04.py  config_odrive_06.py  motors_calibration.py  read_2_encoders.py  read_encoders.py  sin_motion.py  two_boards_calibration.py
exo_config/moteus/: configure.py  read_moteus_encoder.py  readme.md  sin_traj.py  traj_test.py
exo_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
exo_control/exo_control/: admittance_controller.py  exo_control.py  exo_control_torque.py  impedance_controller.py  mock_trajectory_publisher.py  moteus_control_node.py  odrive_calibrator.py  stoop_trajs.py  traj_client.py  two_boards_exo_control.py
exo_interfaces/: CMakeLists.txt  package.xml
exo_interfaces/srv/: RunTrajectory.srv  SetAdmittanceParams.srv  SetControlMode.srv
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/exo_control/lib/exo_control/: admittance_controller.py  mock_trajectory_publisher.py  moteus_control_node.py  stoop_trajs.py  traj_client.py  two_boards_exo_control.py
install/exo_control/share/ament_index/resource_index/package_run_dependencies/: exo_control
install/exo_control/share/ament_index/resource_index/parent_prefix_path/: exo_control
install/exo_control/share/exo_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exo_control/share/exo_control/cmake/: exo_controlConfig-version.cmake  exo_controlConfig.cmake
install/exo_control/share/exo_control/environment/: ament_prefix_path.dsv  path.dsv
install/exo_interfaces/include/exo_interfaces/exo_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/exo_interfaces/include/exo_interfaces/exo_interfaces/srv/: run_trajectory.h  run_trajectory.hpp  set_admittance_params.h  set_admittance_params.hpp  set_control_mode.h  set_control_mode.hpp
install/exo_interfaces/share/exo_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exo_interfaces/share/exo_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  exo_interfacesConfig-version.cmake  exo_interfacesConfig.cmake  exo_interfaces__rosidl_typesupport_cExport-noconfig.cmake  exo_interfaces__rosidl_typesupport_cExport.cmake  exo_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  exo_interfaces__rosidl_typesupport_cppExport.cmake  exo_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  exo_interfaces__rosidl_typesupport_introspection_cExport.cmake  exo_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  exo_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_exo_interfaces__rosidl_generator_cExport-noconfig.cmake  export_exo_interfaces__rosidl_generator_cExport.cmake  export_exo_interfaces__rosidl_generator_cppExport.cmake  export_exo_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_exo_interfaces__rosidl_generator_pyExport.cmake  export_exo_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_exo_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_exo_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_exo_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/exo_interfaces/share/exo_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/exo_interfaces/share/exo_interfaces/srv/: RunTrajectory.idl  RunTrajectory.json  RunTrajectory.srv  SetAdmittanceParams.idl  SetAdmittanceParams.json  SetAdmittanceParams.srv  SetControlMode.idl  SetControlMode.json  SetControlMode.srv
log/: latest_build
odrive_master/: CMakeLists.txt  Doxyfile  README.md  control_loop.cpp  main.cpp  odrive_master
odrive_master/include/: AsyncSerial.h  BufferedAsyncSerial.h  ODrive.h  ODrive_base.h  ascii85.h  logging.h  project.h  shmem.h  version.h
odrive_master/scripts/: check.py  keep_pos.py  read_currents.py  setup_odrive.py  sin_motion.py  step_move.py
odrive_master/src/: AsyncSerial.cpp  BufferedAsyncSerial.cpp  ODrive.cpp  ODrive_base.cpp  ascii85.c  logging.cpp
shared-memory-1.0/: .gitignore  CMakeLists.txt  README.md  shmem.hpp
(+36 files in other folders)
